# llmops_jasmin_shah_mlo25

./: README.md  pyproject.toml
03_llm_intro/: llm_intro.ipynb
09_lancedb/: constants.py  lancedb_basics.ipynb
09_lancedb/knowledge_base/animals_text.lance/_transactions/: 0-5fcd10d8-3a93-4137-b64a-2ecbe5c3bcc1.txn  1-7586c4f7-46ff-4785-a70d-6c62083ccaa9.txn  2-27b7ecfa-8251-4218-a7b1-4489056e4bfa.txn  3-7b71c7ef-b651-406f-accb-2b6d483b1071.txn  4-922d6144-57cf-4d42-bd80-4f175b539e2d.txn
09_lancedb/knowledge_base/jokes.lance/_transactions/: 0-6b9b4cdc-33fa-4321-a48b-98af7455e084.txn  1-0c51817b-1e42-4b3e-8d8b-ffa7e02a19c4.txn
