[project]
name = "llmops-jasmin-shah-mlo25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "lancedb>=0.30.2",
    "mlflow>=3.11.1",
    "pandas>=2.3.3",
    "pydantic-ai>=1.77.0",
    "pykernel>=0.1.6",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
